Add support for the MultiSendRecv operation.
This is a generalized SendRecv where each rank may send to any number
of destinations and receive from any number of sources. This operation
allows Aluminum to better optimize this communication pattern over a
user manually implementing it (in some cases).

--- a/include/aluminum/ht/CMakeLists.txt
+++ b/include/aluminum/ht/CMakeLists.txt
@@ -10,6 +10,7 @@ set_source_path(THIS_DIR_HEADERS
   communicator.hpp
   gather.hpp
   gatherv.hpp
+  multisendrecv.hpp
   reduce.hpp
   reduce_scatter.hpp
   reduce_scatterv.hpp
