--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,14 @@ find_package(Git)
 if (GIT_EXECUTABLE)
   execute_process(
     COMMAND ${GIT_EXECUTABLE} rev-parse --is-inside-source-tree
-    WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
+    WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}"
     OUTPUT_VARIABLE __BUILDING_FROM_GIT_SOURCES
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
   if (__BUILDING_FROM_GIT_SOURCES)
     execute_process(
       COMMAND ${GIT_EXECUTABLE} rev-parse --show-toplevel
-      WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}"
+      WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}"
       OUTPUT_VARIABLE __GIT_TOPLEVEL_DIR
       OUTPUT_STRIP_TRAILING_WHITESPACE)
     execute_process(
