Support enabling debug checks without debug mode.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,7 +113,10 @@ if (ALUMINUM_ENABLE_CUDA OR ALUMINUM_ENABLE_ROCM)
   set(ALUMINUM_HAS_GPU ON)
 endif ()
 
-option(ALUMINUM_DEBUG_HANG_CHECK
+option(ALUMINUM_ENABLE_DEBUG
+  "Enable standard debugging sanity checks."
+  OFF)
+option(ALUMINUM_ENABLE_DEBUG_HANG_CHECK
   "Enable hang checking."
   OFF)
 option(ALUMINUM_ENABLE_NVPROF
@@ -221,7 +224,10 @@ if (AL_BUILD_TYPE_UPPER MATCHES "DEBUG")
   set(AL_DEBUG ON)
   set(AL_ENABLE_TESTS ON)
 endif ()
-if (ALUMINUM_DEBUG_HANG_CHECK)
+if (ALUMINUM_ENABLE_DEBUG)
+  set(AL_DEBUG ON)
+endif ()
+if (ALUMINUM_ENABLE_DEBUG_HANG_CHECK)
   set(AL_DEBUG_HANG_CHECK ON)
 endif ()
 if (ALUMINUM_ENABLE_STREAM_MEM_OPS)
