--- a/cmake/Al_config.hpp.in
+++ b/cmake/Al_config.hpp.in
@@ -105,6 +105,7 @@
 /** Enable various sanity checks, generally light-weight. */
 #cmakedefine AL_DEBUG
 #cmakedefine AL_DEBUG_HANG_CHECK
+#cmakedefine AL_SIGNAL_HANDLER
 
 #cmakedefine AL_HAS_PROF
 #cmakedefine AL_HAS_NVPROF
