--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -26,7 +26,9 @@ set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@" CACHE FILEPATH
   "The MPI CXX compiler wrapper.")
 find_package(MPI 3.0 REQUIRED COMPONENTS CXX)
 
-find_dependency(HWLOC)
+if (AL_USE_HWLOC)
+  find_dependency(HWLOC)
+endif ()
 find_dependency(Threads)
 
 if (AL_HAS_CALIPER)
